<resources>
    <string name="app_name">黄易云音乐</string>
    <string name="now_playing">Now Playing</string>
    <string name="shuffle">Shuffle</string>
    <string name="song_name_test">NameTest (feat.Android)</string>
    <string name="previous">Previous</string>
    <string name="play_puase">Play/Puase</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="favorite">Favorite</string>
    <string name="lyrics">Lyrics</string>
    <string name="albumnametest">AlbumNameTest</string>
    <string name="Lrc_Test">Lyrics Test Lyrics Test Lyrics</string>
    <string name="album_preview">Album Preview</string>
    <string name="Quot_Mark_SBC">“</string>
    <string name="Quot_Mark_R_SBC">”</string>
    <string name="github_address">An Opensource Program by\n\nSamdySnow\n\nGitHub: https://github.com/SamdySnow/NetHardMusic1</string>
    <string name="versionCode">黄易云音乐\n\nV0.10.0 Alpha</string>
    <string name="btn_about">ABOUT</string>
    <string name="about">About</string>
    <string name="test_timeMinousT">-1:10</string>
    <string name="slash">/</string>
    <string name="test_cimeDuration">3:15</string>
    <string name="album_name_test">Album Name Test</string>
    <string name="album_name_test_albums">Album Name Test</string>
    <string name="delete_database">////////// Delete Database ////////</string>
    <string name="create_database">///////// Create Database /////////</string>
    <string name="back">Back</string>
    <string name="add_to_database">Add to Database</string>
    <string name="enter_lyrics_file_path_here">Enter Lyrics File Path Here</string>
    <string name="enter_song_file_path_here">Enter Song File Path Here</string>
    <string name="enter_singer_name_here">Enter Singer Name Here</string>
    <string name="enter_album_image_path_here">Enter Album Image Path Here</string>
    <string name="enter_album_name_here">Enter Album Name Here</string>
    <string name="enter_song_name_here">Enter Song Name Here</string>
    <string name="albums">Albums</string>
    <string name="singers">Singers</string>
    <string name="all_songs">All Songs</string>
    <string name="my_favorite_music">My Favorite Music</string>
    <string name="about_index">About</string>
    <string name="add_song">Add Song</string>
    <string name="albums_index">Albums</string>
    <string name="all_songs_index">All Songs</string>
    <string name="test_song_name_index">Future Pop - ANK</string>
    <string name="my_favorite_music_index">My Favorite Music</string>
    <string name="now_playing_index">Now Playing</string>
    <string name="singers_index">Singers</string>
</resources>