<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Song">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_song_name_here"/>

        <EditText
            android:id="@+id/add_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_album_name_here"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_album_path"
            android:hint="@string/enter_album_image_path_here"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_singer_name"
            android:hint="@string/enter_singer_name_here"/>

        <EditText
            android:id="@+id/add_song_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_song_file_path_here"/>

        <EditText
            android:id="@+id/add_lyrics_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_lyrics_file_path_here"/>

        <Button
            android:id="@+id/btn_add_to_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_database"
            android:layout_gravity="end"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_activity_back"
            android:text="@string/back"
            android:layout_gravity="start"
            android:layout_marginTop="50dp"/>
        <Button
            android:id="@+id/btn_init_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#66CCFF"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            android:text="@string/create_database"/>

        <Button
            android:id="@+id/btn_del_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="@string/delete_database"
            android:layout_gravity="center"
            android:textColor="#FFFFFF" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>