<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ta_about_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="About"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>
        <TextView
            android:id="@+id/about_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_icon"
            android:layout_marginTop="50dp"
            android:text="@string/versionCode"
            android:gravity="center"/>
        <TextView
            android:id="@+id/about_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_tv2"
            android:paddingTop="50dp"
            android:text="@string/github_address"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_about_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_about"
            android:layout_below="@id/about_tv1"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>