<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Index">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@color/black"
        android:dividerPadding="0dp"
        >
        <RelativeLayout
            android:visibility="visible"
            android:layout_marginBottom="15dp"
            android:id="@+id/ta_Now_Playing"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/music_alt"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/now_playing_index"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/index_now_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_song_name_index"/>
                </LinearLayout>

            </LinearLayout>
            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angle_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginVertical="10dp"
            android:id="@+id/ta_Favorite"
            android:layout_width="match_parent"
            android:layout_height="50dp">

                <ImageView
                    android:id="@+id/icon_fav"
                    android:layout_width="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/fav"/>


                    <TextView
                        android:layout_toEndOf="@id/icon_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/my_favorite_music_index"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_centerVertical="true"
                        android:textSize="20sp" />


            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angle_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginVertical="10dp"
            android:id="@+id/ta_all_music"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/icon_allm"
                android:layout_width="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/music_file"/>


            <TextView
                android:layout_toEndOf="@id/icon_allm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/all_songs_index"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:textSize="20sp" />


            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angle_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginVertical="10dp"
            android:id="@+id/ta_singers"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/icon_sig"
                android:layout_width="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/singers"/>


            <TextView
                android:layout_toEndOf="@id/icon_sig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/singers_index"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:textSize="20sp" />


            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angle_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginVertical="10dp"
            android:id="@+id/ta_albums"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/icon_alb"
                android:layout_width="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/albums"/>


            <TextView
                android:layout_toEndOf="@id/icon_alb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/albums_index"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:textSize="20sp" />


            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angle_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginVertical="10dp"
            android:id="@+id/ta_add_songs"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/icon_add"
                android:layout_width="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/add_songs"/>


            <TextView
                android:layout_toEndOf="@id/icon_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/add_song"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:textSize="20sp" />


            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angle_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginVertical="10dp"
            android:id="@+id/ta_about"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/icon_ab"
                android:layout_width="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/about"/>


            <TextView
                android:layout_toEndOf="@id/icon_ab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/about_index"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:textSize="20sp" />


            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angle_right" />
        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>