<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlaying_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:id="@+id/ta_now_play_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_now_playing"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/now_playing"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/cover_test"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/album_preview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <com.jsj.txh.FocusTextView
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:id="@+id/tvSongName_NowPlaying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_marginStart="0dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/comfortaa"
                    android:layout_marginTop="0dp"
                    android:textAlignment="viewStart"
                    android:text="@string/song_name_test" />
                <com.jsj.txh.FocusTextView
                    android:ellipsize="end"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:id="@+id/tvAlbumName_NowPlaying"
                    android:layout_width="match_parent"
                    android:textAlignment="viewStart"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:textSize="11sp"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/albumnametest"/>
            </LinearLayout>
            <ImageView
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:id="@+id/imAdd2Fav"
                android:foregroundGravity="center"
                android:src="@drawable/add2fav"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimeCD"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa"
                android:letterSpacing="0.2"
                android:text="-1:10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/comfortaa"
                android:text="/" />


            <TextView
                android:id="@+id/tvTimeFull"
                android:layout_marginStart="8dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:letterSpacing="0.2"
                android:text="3:15"
                android:textAlignment="textStart" />
        </LinearLayout>

        <SeekBar
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:fontFamily="sans-serif-black"
                android:text='@string/Quot_Mark_SBC'
                android:textSize="40sp"
                android:layout_gravity="center"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <com.jsj.txh.FocusTextView
                android:id="@+id/tvLyrics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:clickable="true"
                android:ellipsize="marquee"
                android:focusable="true"
                android:fontFamily="@font/comfortaa"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:text="@string/Lrc_Test"
                android:textAlignment="center"
                android:textSize="22sp" />
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:fontFamily="sans-serif-black"
                android:text='@string/Quot_Mark_R_SBC'
                android:textSize="40sp"
                android:layout_gravity="end"
                android:textStyle="bold" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            >

<!--            <TextView-->
<!--                android:id="@+id/tvShuffle"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/shuffle"-->
<!--                android:textSize="11sp"-->
<!--                android:gravity="center"-->
<!--                android:layout_weight="1"-->
<!--                android:fontFamily="@font/comfortaa"-->
<!--                android:drawableTop="@drawable/shuffle" />-->
<!--            <TextView-->
<!--                android:id="@+id/tvPrevious"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/previous"-->
<!--                android:textSize="11sp"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:fontFamily="@font/comfortaa"-->
<!--                android:drawableTop="@drawable/previous" />-->
<!--            <TextView-->
<!--                android:id="@+id/tvPlay_Pause"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/play_pause"-->
<!--                android:textSize="11sp"-->
<!--                android:gravity="center"-->
<!--                android:fontFamily="@font/comfortaa"-->
<!--                android:drawableTop="@drawable/pp" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvNext"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:fontFamily="@font/comfortaa"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/next"-->
<!--                android:textSize="11sp"-->
<!--                android:drawableTop="@drawable/next" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvShowLyrics"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:fontFamily="@font/comfortaa_light"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/lyrics"-->
<!--                android:textSize="11sp"-->
<!--                android:drawableTop="@drawable/lyrics"/>-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:src="@drawable/shuffle"
                    android:id="@+id/tvShuffle"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:src="@drawable/previous"
                    android:id="@+id/tvPrevious"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:src="@drawable/pause"
                    android:id="@+id/tvPlay_Pause"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:src="@drawable/next"
                    android:id="@+id/tvNext"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:src="@drawable/lyrics"
                    android:id="@+id/tvShowLyrics"/>
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>